--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,16 @@
         android:windowSoftInputMode="adjustResize"
         tools:targetApi="31">
         <activity
+            android:name=".Manajemen.DetailEditActivity"
+            android:exported="false"
+            android:theme="@style/Theme.QuizMaster" />
+        <activity
+            android:name=".Manajemen.EditActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Manajemen.TambahActivity"
+            android:exported="false" />
+        <activity
             android:name=".Authenticate.RegisterPengajarActivity"
             android:exported="false" />
         <activity
@@ -24,17 +34,16 @@
             android:exported="false" />
         <activity
             android:name=".Authenticate.LoginActivity"
-            android:exported="true" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false" />
     </application>
 
 </manifest>
